--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+foodemoji/tests/italienische-reise.txt
+foodemoji/tests/italienische-reise_emoji.txt
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
