--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: python
 python:
-#  - "2.7"
-#  - "3.4"
-#  - "3.5"
+  - "2.7"
+  - "3.4"
+  - "3.5"
   - "3.6"
-#  - "3.7-dev"  # 3.7 development branch
-#  - "pypy3.5"
+  - "3.7-dev"  # 3.7 development branch
+  - "pypy3.5"
 # command to install dependencies
 install:
   - pip install -r tests/requirements.txt
@@ -18,7 +18,7 @@ script:
   - pytest
   - nosetests
   - coverage run tests/test_*.py
-# must be last
+# must be last (coverage will not track an installed module)
   - python setup.py install 
 after_success:
   - coveralls
