--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ script:
   - python setup.py test
   - pytest
   - nosetests
-  - coverage run tests/test_*.py
+  - coverage run -a tests/test_*.py
 # must be last (coverage will not track an installed module)
   - python setup.py install 
 after_success:
