--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,8 @@ script:
   - python setup.py test
   - pytest
   - nosetests
-  - coverage run -a tests/test_*.py
+  - coverage run -a tests/test_basiclinebyline.py
+  - coverage run -a tests/test_decorate.py
 # must be last (coverage will not track an installed module)
   - python setup.py install 
 after_success:
