--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ install:
   - pip install coverage
   - pip install nose
   - pip install codacy-coverage
+  - pip install codecov
 # command to run tests
 script:
   - python setup.py test
@@ -26,3 +27,4 @@ after_success:
   - coveralls
   - coverage xml
   - python-codacy-coverage -r coverage.xml
+  - codecov
