--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ python:
   - "3.4"
   - "3.5"
   - "3.6"
-  - "3.7-dev"  # 3.7 development branch
+  - "3.7"
+  - "nightly"
   - "pypy3.5"
 # command to install dependencies
 install:
@@ -19,12 +20,12 @@ script:
   - python setup.py test
   - pytest
   - nosetests
-  - coverage run -a tests/test_basiclinebyline.py
-  - coverage run -a tests/test_decorate.py
+  - if [[ $TRAVIS_PYTHON_VERSION != 'nightly' ]]; then coverage run -a tests/test_basiclinebyline.py; fi
+  - if [[ $TRAVIS_PYTHON_VERSION != 'nightly' ]]; then coverage run -a tests/test_decorate.py; fi
 # must be last (coverage will not track an installed module)
   - python setup.py install 
 after_success:
-  - coveralls
-  - coverage xml
-  - python-codacy-coverage -r coverage.xml
-  - codecov
+  - if [[ $TRAVIS_PYTHON_VERSION != 'nightly' ]]; then coveralls; fi
+  - if [[ $TRAVIS_PYTHON_VERSION != 'nightly' ]]; then coverage xml; fi
+  - if [[ $TRAVIS_PYTHON_VERSION != 'nightly' ]]; then python-codacy-coverage -r coverage.xml; fi
+  - if [[ $TRAVIS_PYTHON_VERSION != 'nightly' ]]; then codecov; fi
