--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,10 @@ python:
   - "3.6"
   - "3.7"
   - "3.8"
-  - "nightly"
   - "pypy3.5"
 # command to install dependencies
 install:
   - pip install -r tests/requirements.txt
-  - pip install nose
   - if [[ $TRAVIS_PYTHON_VERSION == '2.7' || $TRAVIS_PYTHON_VERSION == '3.8' ]]; then pip install python-coveralls; fi
   - if [[ $TRAVIS_PYTHON_VERSION == '2.7' || $TRAVIS_PYTHON_VERSION == '3.8' ]]; then pip install coverage; fi
   - if [[ $TRAVIS_PYTHON_VERSION == '2.7' || $TRAVIS_PYTHON_VERSION == '3.8' ]]; then pip install codacy-coverage; fi
@@ -21,7 +19,7 @@ install:
 script:
   - python setup.py test
   - pytest
-  - if [[ $TRAVIS_PYTHON_VERSION != 'nightly' ]]; then nosetests; fi
+  - nosetests
   - if [[ $TRAVIS_PYTHON_VERSION == '2.7' || $TRAVIS_PYTHON_VERSION == '3.8' ]]; then coverage run -a tests/test_basiclinebyline.py; fi
   - if [[ $TRAVIS_PYTHON_VERSION == '2.7' || $TRAVIS_PYTHON_VERSION == '3.8' ]]; then coverage run -a tests/test_decorate.py; fi
 # must be last (coverage will not track an installed module)
