--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,2 +1,3 @@
-sphinx>=3.3.1
-sphinx-rtd-theme>=0.5.0
+sphinx==6.1.3
+sphinxcontrib-jquery
+setuptools>=65.5.1 # not directly required, pinned by Snyk to avoid a vulnerability
